finished integrating login/authorizing with twitter oauth; specced; features;

--- a/app/views/teams/_member.html.haml
+++ b/app/views/teams/_member.html.haml
@@ -1,6 +1,6 @@
 %div.user{ :class => cycle(:odd, :even), :id => member.dom_id}
   .actions= member.action_links.join(" ")
   %h3
-    %img{:src => "#{gravatar_url(member.email)}", :alt => ""}
+    %img{:src => "#{member.avatar}", :alt => ""}
     = link_to member.email
     %span{:class => member.status}= member.status
