--- a/app/views/dashboard/_log.html.haml
+++ b/app/views/dashboard/_log.html.haml
@@ -1,7 +1,5 @@
-%div.log{:id => log.dom_id}
-  %p.status
-    = log.log_type
-  %p.body
-    = log.body
-  %p.body
-    = log.user
+%tr{:id => log.dom_id}
+  %td.type= log.log_type
+  %td.target= link_to "Target", polymorphic_path(log.loggable)
+  %td.body= log.body
+  %td= log.user
