finished logging brand_results updates (marking a result as follow_up/done/normal); views (styles); specs; features;

--- a/app/stylesheets/partials/_general.sass
+++ b/app/stylesheets/partials/_general.sass
@@ -125,3 +125,14 @@ table.index
     &:last-child
       td
         :border none
+        
+.status
+  span.tag
+    :font-weight normal
+    :padding 1px 5px
+    &.follow_up
+      :color #FFFFFF
+      :background rgb(255,100,100)
+    &.done
+      :color #FFFFFF
+      :background #0000FF
