--- a/app/stylesheets/partials/_logs.sass
+++ b/app/stylesheets/partials/_logs.sass
@@ -12,7 +12,7 @@ div
         background: rgb(230,230,230)
         padding: 4px 10px
         padding-bottom: 3px
-  .result
+  .log
     :border-bottom 1px dotted #ccc
     :padding-bottom 5px
     :margin-bottom 10px
@@ -21,10 +21,3 @@ div
       :font-size 11px
     .status
       :font-size 11px
-      :padding-left 20px
-
-  #entries
-    :font
-      :weight bold
-      :size 13px
-    :margin-bottom 10px
