--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -14,5 +14,6 @@
 @import partials/team.sass
 @import partials/formtastic_base.sass
 @import partials/forms.sass
+@import partials/logs.sass
 @import partials/date-picker/jquery-ui-1.8.sass
 @import partials/date-picker/date-picker.sass
