added comments controller, posting a new comment and showing the comments on brand_result page

--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -15,5 +15,6 @@
 @import partials/formtastic_base.sass
 @import partials/forms.sass
 @import partials/logs.sass
+@import partials/comments.sass
 @import partials/date-picker/jquery-ui-1.8.sass
 @import partials/date-picker/date-picker.sass
