--- a/app/views/brand_results/show.html.haml
+++ b/app/views/brand_results/show.html.haml
@@ -9,3 +9,13 @@
       = auto_link(sanitize(brand_result.result.body), :urls, :html => { :target => '_blank'})
     %p.leenks
       = brand_result.action_links.join(" | ")
+  
+  %div.comments
+    - brand_result.comments.each do |comment|
+      = render "comments/comment", :object => comment
+    
+    - semantic_form_for [@brand_result, @comment] do |f|
+      - f.inputs do
+        = f.input :content
+      - f.buttons do
+        = f.commit_button "Post comment"
