logging the creation of comments; showing the comment logs on dashboard; specs; features;

--- a/app/stylesheets/partials/_general.sass
+++ b/app/stylesheets/partials/_general.sass
@@ -136,3 +136,6 @@ table.index
     &.done
       :color #FFFFFF
       :background #0000FF
+    &.comment
+      :color #FFFFFF
+      :background #6492AC
