styled comments; improved comment related views

--- a/app/stylesheets/partials/_forms.sass
+++ b/app/stylesheets/partials/_forms.sass
@@ -16,6 +16,10 @@ form.formtastic
             border: solid 1px rgb(160,160,160)
         &.error
           +error
+        &.text
+          textarea
+            :width 500px
+            :height 100px
   &.large
     fieldset ol li
       &.string, &.password
