layout modifications: 'My account' link moved from header to navigation; dashboard page styles somehow like basecamp's

--- a/app/stylesheets/partials/_general.sass
+++ b/app/stylesheets/partials/_general.sass
@@ -132,10 +132,13 @@ table.index
     :padding 1px 5px
     &.follow_up
       :color #FFFFFF
-      :background rgb(255,100,100)
+      :background #C87800
     &.done
       :color #FFFFFF
       :background #0000FF
     &.comment
       :color #FFFFFF
       :background #6492AC
+    &.normal
+      :color #FFFFFF
+      :background #FF0000
