changed Brandizzle to BrandPulse throughout the project

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title Brandizzle    
+    %title BrandPulse
     = stylesheet_link_tag 'compiled/screen.css', :media => 'screen, projection'
     /[if lte IE 8]
       = stylesheet_link_tag 'compiled/ie.css', :media => 'screen, projection'
