--- a/app/views/pages/show/about.html.haml
+++ b/app/views/pages/show/about.html.haml
@@ -1,13 +1,13 @@
-- title "About Brandizzle"
+- title "About BrandPulse"
 
 .static
-  %h4 What is Brandizzle?
+  %h4 What is BrandPulse?
 
-  %p Brandizzle is a Social Brand Monitoring application that helps you search various social networks to keep track of what people are saying.  Currently Brandizzle supports twitter and google blog search.
+  %p BrandPulse is a Social Brand Monitoring application that helps you search various social networks to keep track of what people are saying. Currently BrandPulse supports twitter and google blog search.
 
   %h4 How does it work?
 
-  %p You add a Brand.  This could be you, your company or your product, you get the idea.  Then you start adding search terms to watch out for, some ideas you might consider:
+  %p You add a Brand.  This could be you, your company or your product, you get the idea. Then you start adding search terms to watch out for, some ideas you might consider:
 
   %p For yourself:
   %ul
