--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -2,7 +2,7 @@
   .top
     %h1
       %span
-        = link_to 'Brandizzle', brand_results_path
+        = link_to 'BrandPulse', brand_results_path
     .account-links
       - if current_user
         %ul
