--- a/app/views/layouts/login.html.haml
+++ b/app/views/layouts/login.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title Brandizzle    
+    %title BrandPulse
     = stylesheet_link_tag 'compiled/screen.css', :media => 'screen, projection'
     =# stylesheet_link_tag 'compiled/print.css', :media => 'print'
     /[if lte IE 8]
@@ -14,7 +14,7 @@
         .top
           %h1
             %span
-              = link_to 'Brandizzle', brand_results_path
+              = link_to 'BrandPulse', brand_results_path
           .account-links
             %ul
               %li= link_to "Login", new_user_session_path
