--- a/app/views/brand_results/show.html.haml
+++ b/app/views/brand_results/show.html.haml
@@ -2,12 +2,14 @@
 
 - brand_result_with_presenter @brand_result do |brand_result|
   %div.result{ :id => brand_result.dom_id}
-    %p.status{:style => "background:transparent url('/images/#{brand_result.result.source}.png') no-repeat left center"}
+    %div.status{:style => "background:transparent url('/images/#{brand_result.result.source}.png') no-repeat left center"}
       = format_date_time brand_result.result.created_at
       = brand_result.status
-    %p.body
+      %p.connotation_links
+        = brand_result.connotation_links.join()
+    %div.body
       = auto_link(sanitize(brand_result.result.body), :urls, :html => { :target => '_blank'})
-    %p.leenks
+    %div.leenks
       = brand_result.action_links.join(" | ")
   
   %div.comments
