--- a/app/stylesheets/partials/_results.sass
+++ b/app/stylesheets/partials/_results.sass
@@ -19,9 +19,29 @@ div
     .leenks
       :margin-top 3px
       :font-size 11px
+    .body
+      +general_font
+      :margin-top 5px
     .status
       :font-size 11px
       :padding-left 20px
+      +clearfix
+      .connotation_links
+        +clearfix
+        :float right
+        a
+          :float left
+          :display block
+          :width 16px
+          :height 16px
+          :text-indent -9999px
+          :margin-left 5px
+          &.positive
+            :background transparent url("/images/positive.png") no-repeat left top
+          &.negative
+            :background transparent url("/images/negative.png") no-repeat left top
+          
+
 
   #entries
     :font
