updated temperature views; created separate put actions for managing brand_result temperature; renamed attribute from connotation to temperature; updated specs;

--- a/app/stylesheets/partials/_results.sass
+++ b/app/stylesheets/partials/_results.sass
@@ -26,21 +26,11 @@ div
       :font-size 11px
       :padding-left 20px
       +clearfix
-      .connotation_links
+      .temperature_links
         +clearfix
-        :float right
+        :float right          
         a
-          :float left
-          :display block
-          :width 16px
-          :height 16px
-          :text-indent -9999px
-          :margin-left 5px
-          &.positive
-            :background transparent url("/images/positive.png") no-repeat left top
-          &.negative
-            :background transparent url("/images/negative.png") no-repeat left top
-          
+          :text-decoration none
 
 
   #entries
