added mark-as-read both for one brand-result, and for more; specs; features; styles

--- a/app/stylesheets/partials/_results.sass
+++ b/app/stylesheets/partials/_results.sass
@@ -31,10 +31,16 @@ div
         :float right          
         a
           :text-decoration none
-
-
-  #entries
-    :font
-      :weight bold
-      :size 13px
-    :margin-bottom 10px
+  &.read
+    :color = !general_font_color + #666666
+  .top
+    +clearfix
+    #entries
+      :font
+        :weight bold
+        :size 13px
+      :margin-bottom 10px
+      :float left
+    .mark
+      :float right
+      :font-size 11px
