--- a/app/stylesheets/partials/_general.sass
+++ b/app/stylesheets/partials/_general.sass
@@ -1,10 +1,13 @@
+!general_font_color = #000000
+!general_link_color = #0000FF
+
 !follow_up_color = #C87800
 !done_color = #0000FF
 !rejected_color = #FF0000
 !comment_color = #6492AC
 !negative_color = #FF0000
 !positive_color = #009966
-!neutral_color = #333
+!neutral_color = #333333
 
 = general_font
   font: normal 12px  Arial, Tahoma, Verdana,  sans-serif
@@ -18,6 +21,7 @@ body
   padding: 0px
   font-family: Verdana, Arial, sans-serif
   background: rgb(146,146,146)
+  :color = !general_font_color
 
 h1, h2, h3, h4
   font-family: 'Lucida Grande', Verdana, Arial, sans-serif
@@ -44,12 +48,18 @@ p
   line-height: 1.4em
 
 a
-  color: rgb(0,0,255)
-
+  :color = !general_link_color
   &:hover
-    color: rgb(255,255,255)
-    background: rgb(0,0,255)
-    text-decoration: none
+    :color #FFFFFF
+    :background-color = !general_link_color
+    :text-decoration none
+    
+  .read &
+    :color = !general_link_color + #666666
+    &:hover
+      :color #FFFFFF
+      :background-color = !general_link_color + #666666
+      :text-decoration none
 
 img
   margin: 0px
@@ -147,8 +157,12 @@ table.index
     :color #FFFFFF
     &.follow_up
       :background = !follow_up_color
+      .read &
+        :background = !follow_up_color + #333333
     &.done
       :background = !done_color
+      .read &
+        :background = !done_color + #666666
     &.comment
       :background = !comment_color
     &.normal
