showing the applied filters; added read/unread filters for results; specs; features

--- a/app/stylesheets/partials/_results.sass
+++ b/app/stylesheets/partials/_results.sass
@@ -34,13 +34,10 @@ div
   &.read
     :color = !general_font_color + #666666
   .top
-    +clearfix
-    #entries
+    :font-size 12px
+    :margin-bottom 5px
+    .entries
       :font
         :weight bold
         :size 13px
       :margin-bottom 10px
-      :float left
-    .mark
-      :float right
-      :font-size 11px
