updated filters; upgraded to haml-edge

--- a/app/stylesheets/partials/_results.sass
+++ b/app/stylesheets/partials/_results.sass
@@ -35,9 +35,9 @@ div
     :color = !general_font_color + #666666
   .top
     :font-size 12px
-    :margin-bottom 5px
+    :margin-bottom 10px
+    +clearfix
+    .applied_filters
+      :float left
     .entries
-      :font
-        :weight bold
-        :size 13px
-      :margin-bottom 10px
+      :float right
