--- a/app/stylesheets/partials/_general.sass
+++ b/app/stylesheets/partials/_general.sass
@@ -9,8 +9,11 @@
 !positive_color = #009966
 !neutral_color = #333333
 
-= general_font
-  font: normal 12px  Arial, Tahoma, Verdana,  sans-serif
+= general_font(!size=13px)
+  :font
+    :size= !size
+    :weight normal
+    :family Arial, Tahoma, Verdana, sans-serif
 
 html
   margin: 0px
@@ -19,9 +22,9 @@ html
 body
   margin: 0px
   padding: 0px
-  font-family: Verdana, Arial, sans-serif
   background: rgb(146,146,146)
   :color = !general_font_color
+  +general_font(13px)
 
 h1, h2, h3, h4
   font-family: 'Lucida Grande', Verdana, Arial, sans-serif
