minor style modifications:
* checked font-size and famuly
* shop page for result not dimmed if result marked as read
* added few css tools

--- a/app/stylesheets/partials/_general.sass
+++ b/app/stylesheets/partials/_general.sass
@@ -24,7 +24,7 @@ body
   padding: 0px
   background: rgb(146,146,146)
   :color = !general_font_color
-  +general_font(13px)
+  +general_font
 
 h1, h2, h3, h4
   font-family: 'Lucida Grande', Verdana, Arial, sans-serif
@@ -70,9 +70,6 @@ img
 
 br
   clear: both
-
-.strong
-  :font-weight bold
 
 div
   &.content_wrap
