--- a/app/stylesheets/partials/_tools.sass
+++ b/app/stylesheets/partials/_tools.sass
@@ -18,8 +18,17 @@
 .center
   :text-align center
 
+.strong
+  :font-weight bold
+
 .nowrap
   +nowrap
+
+.float-right
+  +float-right
+
+.float-left
+  +float-left
 
 =rounded(!radius = 5px)
   :border-radius = !radius
