--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -2,6 +2,7 @@
 @import blueprint
 @import compass/utilities.sass
 @import partials/general.sass
+@import partials/tools.sass
 @import partials/header.sass
 @import partials/footer.sass
 @import partials/sidebar.sass
