fixed "All" filter to maintain previous selected brand and time-range

--- a/app/views/brand_results/index.html.haml
+++ b/app/views/brand_results/index.html.haml
@@ -10,7 +10,7 @@
     or
     = read_state_filter("Read", 1)
     or
-    = link_to "All", brand_results_path
+    = all_filter
     
 .sidebar
   %h3 Brands
