--- a/app/stylesheets/partials/_login.sass
+++ b/app/stylesheets/partials/_login.sass
@@ -6,5 +6,5 @@ div
       :width 700px
     .header
       :margin-bottom 20px
-      .top .account-links ul li a
+      .top .account-links ul li:first-child a
         :border none
