--- a/app/views/layouts/login.html.haml
+++ b/app/views/layouts/login.html.haml
@@ -18,6 +18,7 @@
           .account-links
             %ul
               %li= link_to "Login", new_user_session_path
+              %li= link_to "Sign up", new_account_path
       .wrapper
         .content_wrap
           - if show_title?
