--- a/app/views/accounts/edit.html.haml
+++ b/app/views/accounts/edit.html.haml
@@ -1,5 +1,7 @@
 - title "Edit your account information"
 
+= error_messages_for :subscription
+
 - semantic_form_for @subscription, :url => account_subscription_path(@account), :html => { :class => "account large" } do |f|
   - f.inputs do
     = f.input :card_number
