--- a/app/views/accounts/show.html.haml
+++ b/app/views/accounts/show.html.haml
@@ -1,11 +1,15 @@
 - title "Your account information"
 
 %div
-  Your Card Type: 
+  Card Type: 
   = @account.card_type
 %div
-  Your Credit Card last 4 digits:
+  Credit Card last 4 digits:
   = @account.card_number_last_4_digits
+
+%div
+  Credit Card expiration date:
+  = @account.card_expiration_date
 
 %div
   = link_to "Edit", edit_account_path
