--- a/app/views/accounts/edit.html.haml
+++ b/app/views/accounts/edit.html.haml
@@ -8,8 +8,13 @@
     = f.input :last_name, :label => "Last name on card"
     = f.input :postal_code
     = f.input :card_number
-    = f.input :expiration_month, :as => :select, :collection => ["01", "02", "03", "04", "05", "06", "07", "08", "09", "10", "11", "12"]
-    = f.input :expiration_year, :as => :select, :collection => Time.now.year..Time.now.year+10
+    %li
+      = label_tag "Expiration Date*"
+      = f.select :expiration_month,  ["01", "02", "03", "04", "05", "06", "07", "08", "09", "10", "11", "12"]
+      \/
+      = f.select :expiration_year,  Time.now.year..Time.now.year+10
+    =# f.input :expiration_month, :as => :select, :collection => ["01", "02", "03", "04", "05", "06", "07", "08", "09", "10", "11", "12"]
+    =# f.input :expiration_year, :as => :select, :collection => Time.now.year..Time.now.year+10
     = f.input :cvv, :label => "Card verification number"
   - f.buttons do
     = f.commit_button "Update information"
