modified account activation to ask for password after email was sent; updated specs and features; improved account specs;

--- a/app/views/activations/new.html.haml
+++ b/app/views/activations/new.html.haml
@@ -1,5 +1,8 @@
 - title "Activate your account"
 
-- semantic_form_for @user, :url => activate_path(@user.id) do |f|
+- semantic_form_for @user, :url => activate_path(@user.id), :html => { :class => "account large" } do |f|
+  - f.inputs do
+    = f.input :password
+    = f.input :password_confirmation
   - f.buttons do
     = f.commit_button "Activate my account and log me in"
