--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -17,5 +17,6 @@
 @import partials/forms.sass
 @import partials/logs.sass
 @import partials/comments.sass
+@import partials/account.sass
 @import partials/date-picker/jquery-ui-1.8.sass
 @import partials/date-picker/date-picker.sass
