updated mark-up and styles for show and edit account pages

--- a/app/stylesheets/partials/_account.sass
+++ b/app/stylesheets/partials/_account.sass
@@ -17,4 +17,11 @@ ul#accepted_cards
       :background transparent url('/images/accepted_card_types.png') no-repeat -156px 0
     &.dinners
       :background transparent url('/images/accepted_card_types.png') no-repeat -195px 0
-      
+
+#errorExplanation
+  :margin-bottom 10px
+  ul
+    +no-bullets
+    li
+      :padding-left 10px
+      :color #8A1F11
