--- a/app/stylesheets/partials/_general.sass
+++ b/app/stylesheets/partials/_general.sass
@@ -137,6 +137,17 @@ div
       &:hover
         background-color: transparent
         color: rgb(0,0,255)
+    
+    .edit
+      +hover-link
+      display: block
+      float: right
+      width: 100px
+      height: 24px
+      text-align: right
+      &:hover
+        :background-color transparent
+        :color rgb(0,0,255)
       
 table.index
   :width 100%
